# simple2d-bool

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.md  algorithms.h  bool_poligono.h  bool_polygon.cpp  bool_polygon.h  dump_poligono.h  dump_polygon.cpp  dump_polygon.h  loader_poligono.cpp  loader_poligono.h  loader_polygon.cpp  loader_polygon.h  main.cpp  math.cpp  math.h  point.cpp  point.h  poligono.h  polygon.cpp  polygon.h  punto.h  random_poligono.cpp  random_poligono.h  random_polygon.cpp  random_polygon.h  reconstruccion.h  reconstruction.cpp  reconstruction.h  segment.cpp  segment.h  segmento.h  signo.cpp  signo.h  triangle.cpp  triangle.h  triangulo.h
examples/: README.md  plot-segments.sh  triangle.cpp
exe/: generapoligono.cpp  interseccion_file.cpp  triangulo.cpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
test/: CMakeLists.txt  Makefile  diferencia.cpp  diferencia_file.cpp  generapoligono.cpp  interseccion_file.cpp  intersection.cpp  plot.sh  polygon_inclusion.cpp  triangle_inclusion.cpp  triangulo.cpp  union.cpp  union_file.cpp
